--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'saschpe.android:pls-parser:1.0.2'
     testCompile 'junit:junit:4.12'
     compile project(':jdom-2.0.5')
+
+    compile 'com.afollestad.material-dialogs:core:0.9.4.2'
+    compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
 }
