--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
 
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
     compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
+
+    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
+
 }
